Added basic features.

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="popup.html">Link</a></li>
+        <li><a href="popup.html">Search</a></li>
         <li><a href="settings.html">Settings</a></li>
         <li class="active"><a href="about.html">About</a></li>
       </ul>
@@ -45,8 +45,7 @@
 </nav>
         <div class="container">
             <div class="starter-template">
-                <h1>Bootstrap starter template</h1>
-                <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+                Coming soon!
             </div>
         </div>
     </body>
