--- a/popup.html
+++ b/popup.html
@@ -11,42 +11,57 @@
         <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css"/>
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
+        <script src="js/data.js"></script>
         <script src="js/popup.js"></script>
         <style type="text/css">
             body {
                 width: 600px;
-                height: 800px;
+                min-height: 400px;
+            }
+            #gif {
+                width: 150px;
+                padding:5px;
             }
         </style>
     </head>
     <body>
         <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Extension for 9GAG</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="popup.html">Link</a></li>
-        <li><a href="settings.html">Settings</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+            <div class="container-fluid">
+                <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Extension for 9GAG</a>
+                </div>
+                <!-- Collect the nav links, forms, and other content for toggling -->
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="popup.html">Seach</a></li>
+                        <li><a href="settings.html">Settings</a></li>
+                        <li><a href="about.html">About</a></li>
+                    </ul>
+                </div><!-- /.navbar-collapse -->
+            </div><!-- /.container-fluid -->
+        </nav>
         <div class="container">
             <div class="starter-template">
-                <h1>Bootstrap starter template</h1>
-                <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Enter keyword(s), click on GIF you like and paste it!" id="search_input">
+                      <span class="input-group-btn">
+                          <button class="btn btn-secondary" type="button" id="search_button">Search!</button>
+                      </span>
+                </div>
+                <br/>
+                <b>Try:</b> "haha" "yes" "facepalm" "mad" "angry"
+            </div>
+        </div>
+        <div class="container">
+            <div class="row" id="result">
+
             </div>
         </div>
     </body>
