--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
         <script src="js/bootstrap.min.js"></script>
         <script src="js/popup.js"></script>
         <style type="text/css">
-            body {
-                width: 600px;
-                height: 800px;
-            }
+        body {
+            width: 600px;
+            min-height: 400px;
+        }
         </style>
     </head>
     <body>
@@ -45,7 +45,16 @@
 </nav>
         <div class="container">
             <div class="starter-template">
-                Coming soon!
+                <h3>About the extension</h3><hr/>
+                This Chrome extension is for 9gaggers to search GIFs and copy them to comment on 9GAG posts.
+                <h3>Special thanks to</h3><hr/>
+                <a href="https://memefulsearch.github.io/">Memeful search</a> - This is the place from where I used JS file which contains links to all corresponding keywords. Man! I didn't have to write my own script to scrap links from memeful.com because of this captain.<br/>
+                <a href="https://9gag.com/">9GAG</a> - for our source of daily fun! (Please don't sue me!)<br/>
+                <a href="http://memeful.com/">Memeful</a> - source of all GIFs link.
+                <h3>Know me more</h3><hr/>
+                Hey man! this is <a href="https://9gag.com/u/indian_peasant">@indian_peasant</a>! Hello from the other side. I am sophomore CSE student from India who spends ₹130 (approx. $2) daily on food. That might me a small sum for some of you but that's a big deal for me. If you can help me financially or in some way, that's really appreciable. :)
+                <h3>Disclaimer</h3><hr/>
+                I don't own any rights to logo, GIFs etc. used to build this extension. I am just a fan from India.
             </div>
         </div>
     </body>
