--- a/settings.html
+++ b/settings.html
@@ -13,10 +13,10 @@
         <script src="js/bootstrap.min.js"></script>
         <script src="js/popup.js"></script>
         <style type="text/css">
-            body {
-                width: 600px;
-                height: 800px;
-            }
+        body {
+            width: 600px;
+            min-height: 400px;
+        }
         </style>
     </head>
     <body>
