--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                 <a href="https://9gag.com/">9GAG</a> - for our source of daily fun! (Please don't sue me!)<br/>
                 <a href="http://memeful.com/">Memeful</a> - source of all GIFs link.
                 <h3>Know me more</h3><hr/>
-                Hey man! this is <a href="https://9gag.com/u/indian_peasant">@indian_peasant</a>! Hello from the other side. I am sophomore CSE student from India who spends ₹130 (approx. $2) daily on food. That might me a small sum for some of you but that's a big deal for me. If you can help me financially or in some way, that's really appreciable. :)
+                Hey man! this is <a href="https://9gag.com/u/indian_peasant">@indian_peasant</a>! Hello from the other side. I am sophomore CSE student from India who spends ₹130 (approx. $2) daily on food. That might me a small sum for some of you but that's a big deal for me. If you can help me financially or in some way, that's really appreciable. :)<br/>Any kind of feedback will be under my scrutiny.
                 <h3>Disclaimer</h3><hr/>
                 I don't own any rights to logo, GIFs etc. used to build this extension. I am just a fan from India.
             </div>
