--- a/about.html
+++ b/about.html
@@ -45,16 +45,15 @@
 </nav>
         <div class="container">
             <div class="starter-template">
-                <h3>About the extension</h3><hr/>
-                This Chrome extension is for 9gaggers to search GIFs and copy them to comment on 9GAG posts.
+                <h3>About the Extension</h3><hr/>
+                This Chrome extension is for 9gaggers to search GIFs, copy and paste in the comment section.
                 <h3>Special thanks to</h3><hr/>
-                <a href="https://memefulsearch.github.io/">Memeful search</a> - This is the place from where I used JS file which contains links to all corresponding keywords. Man! I didn't have to write my own script to scrap links from memeful.com because of this captain.<br/>
-                <a href="https://9gag.com/">9GAG</a> - for our source of daily fun! (Please don't sue me!)<br/>
-                <a href="http://memeful.com/">Memeful</a> - source of all GIFs link.
-                <h3>Know me more</h3><hr/>
-                Hey man! this is <a href="https://9gag.com/u/indian_peasant">@indian_peasant</a>! Hello from the other side. I am sophomore CSE student from India who spends ₹130 (approx. $2) daily on food. That might me a small sum for some of you but that's a big deal for me. If you can help me financially or in some way, that's really appreciable. :)<br/>Any kind of feedback will be under my scrutiny.
+                <a href="https://9gag.com/">9GAG</a> - Our source of daily fun!<br/>
+                <a href="http://memeful.com/">Memeful</a> - Source of all GIF and meme links.
+                <h3>More</h3><hr/>
+                You can know more about the extension on my <a href="">Medium post!</a>
                 <h3>Disclaimer</h3><hr/>
-                I don't own any rights to logo, GIFs etc. used to build this extension. I am just a fan from India.
+                I don't own any rights to logo, GIFs etc. used to build this extension. I am just a fan from India. (Please don't sue me!)
             </div>
         </div>
     </body>
