--- a/popup.html
+++ b/popup.html
@@ -11,7 +11,7 @@
         <link type="text/css" rel="stylesheet" href="css/bootstrap-theme.css"/>
         <script src="js/jquery-3.2.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
-        <script src="js/data.js"></script>
+        <script src="js/memeful_data.json"></script>
         <script src="js/popup.js"></script>
         <style type="text/css">
             body {
@@ -56,10 +56,10 @@
                       </span>
                 </div>
                 <br/>
-                <b>Try:</b> "haha" "yes" "facepalm" "mad" "angry"
+                <b>Try these:</b> <a href="javascript:void(0);">haha</a>, <a href="javascript:void(0);">yes</a>, <a href="javascript:void(0);">facepalm</a>, <a href="javascript:void(0);">angry</a> or <a href="javascript:void(0);">wow</a>!
             </div>
         </div>
-        <div class="container">
+        <div class="container" style="padding: 5px">
             <div class="row" id="result">
 
             </div>
